# lidarManagement

./: .gitignore  CMakeLists.txt  README.md
include/: McuCommand.hpp  UartComm.hpp  obstacleDetection.h
src/: McuCommand.cpp  UartComm.cpp  main.cpp  obstacleDetection.cpp
